<?xml version="1.0"?>
<package format="2">
  <name>graph_dynamic_slam</name>
  <version>0.0.0</version>
  <description>The graph_dynamic_slam package</description>

  <maintainer email="baltashow1996@gmail.com">Ilia Baltashov</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>ndt_omp</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
